@@ -9,7 +9,7 @@
 ## Title: Baud Bag
 ## Title-zhCN: 背包整合 Baud Bag
 ## Title-zhTW: 背包整合 Baud Bag
-## Version: 4.0.3 alpha
+## Version: 4.0.3 beta 1
 
 Localization.lua
 BaudBagFunctions.lua
