@@ -23,6 +23,8 @@ if (Locale=="zhTW") then -- Translator: Isler
     CheckTooltip = "啟用的背包",
     Enabled = "啟用整合功能",
     EnabledTooltip = "啟用或禁用整合功能",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
     KeyRing = "鑰匙鏈",
     Of = " 的",
     Inventory = "背包",
@@ -61,6 +63,8 @@ elseif (Locale=="zhCN") then  -- Translator: Isler
     CheckTooltip = "启用的背包",
     Enabled = "启用整合功能",
     EnabledTooltip = "启用或禁用整合功能",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
     KeyRing = "钥匙链",
     Of = " 的",
     Inventory = "背包",
@@ -98,6 +102,8 @@ elseif (Locale=="frFR") then  -- Translator: Isler
     CheckTooltip = "Sacs Joints",
     Enabled = "Activer",
     EnabledTooltip = "Permettre ou mettre hors service BaudBag pour vos sac.",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
     KeyRing = "Trousseau de clef",
     Of = "'s ",
     Inventory = "votre sac",
@@ -135,6 +141,8 @@ elseif (Locale == "deDE") then -- Translator: Thurmal
     CheckTooltip = "Taschen zusammenfassen",
     Enabled = "Aktiviert",
     EnabledTooltip = "Aktiviere oder Deaktiviere BaudBag für diesen Taschen-Typ.",
+    CloseAll = "Alle schließen",
+    CloseAllTooltip = "Schließt alle Taschen des Sets wenn der erste Container (Rucksack/Bank) geschlossen wird.",
     KeyRing = "Schlüsselbund",
     Of = "s ",
     Inventory = "Inventar",
@@ -172,6 +180,8 @@ elseif (Locale == "koKR") then -- Translator: talkswind
 	CheckTooltip = "가방을 합칩니다.",
 	Enabled = "활성화",
 	EnabledTooltip = "이 가방 세트에 대해 BaudBag을 활성화 혹은 비활성화합니다.",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
 	KeyRing = "열쇠 고리",
 	Of = "'의 ",
 	Inventory = "소지품",
@@ -209,6 +219,8 @@ elseif (Locale == "ruRU") then -- Translator: StingerSoft
     CheckTooltip = "Присоединить сумку",
     Enabled = "Включить",
     EnabledTooltip = "Включить или отключить BaudBag.",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
     KeyRing = "Связка ключей",
     Of = " ",
     Inventory = "Инвентарь",
@@ -246,6 +258,8 @@ else --enUS (default)
     CheckTooltip = "Joined bags",
     Enabled = "Enabled",
     EnabledTooltip = "Enable or disable BaudBag for this bag set.",
+    CloseAll = "Close all",
+    CloseAllTooltip = "Close all bags of this set when the first container (bank or backpack) is closed.",
     KeyRing = "Key Ring",
     Of = "'s ",
     Inventory = "Inventory",
